--- a/afya_care/views/stock_picking.xml
+++ b/afya_care/views/stock_picking.xml
@@ -6,28 +6,32 @@
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//header//button[@name='button_validate']" position="attributes">
-                    <attribute name="attrs">{'invisible': ['|','|', ('state', 'in', ('waiting','confirmed')), ('show_validate', '=', False),('approval_status', 'not in', ['approved'])]}</attribute>
+                    <attribute name="attrs">{'invisible': ['|','|', ('state', 'in', ('waiting','confirmed')), ('show_validate', '=', False),'&amp;',('approval_status', 'not in', ['approved']),('picking_type_code','=','internal')]}</attribute>
                 </xpath>
                 <xpath expr="//header//button[@name='action_open_label_type']" position="attributes">
-                    <attribute name="attrs">{'invisible': [('approval_status', 'not in', ['approved'])]}</attribute>
+                    <attribute name="attrs">{'invisible': [('approval_status', 'not in', ['approved']),('picking_type_code','=','internal')]}</attribute>
                 </xpath>
                 <xpath expr="//header//button[@name='button_scrap']" position="attributes">
-                    <attribute name="attrs">{'invisible': [('approval_status', 'not in', ['approved'])]}</attribute>
+                    <!-- <attribute name="attrs">{'invisible': [('approval_status', 'not in', ['approved'])]}</attribute> -->
+                    <attribute name="attrs">{'invisible': ['|','|', '&amp;', ('picking_type_code', '=', 'incoming'), ('state', '!=', 'done') ,'&amp;', ('picking_type_code', '=', 'outgoing'), ('state', '=', 'done'),'&amp;', ('picking_type_code','=','internal'),('approval_status', 'not in', ['approved'])]}</attribute>
                 </xpath>
                 <xpath expr="//header//button[@name='action_confirm']" position="attributes">
-                    <attribute name="attrs">{'invisible': ['|',('show_mark_as_todo', '=', False),('approval_status', 'not in', ['approved'])]}</attribute>
+                    <attribute name="attrs">{'invisible': ['|',('show_mark_as_todo', '=', False),'&amp;',('approval_status', 'not in', ['approved']),('picking_type_code','=','internal')]}</attribute>
+                </xpath>
+                <xpath expr="//header//button[@name='do_print_picking']" position="attributes">
+                    <attribute name="attrs">{'invisible': ['|',('state', '!=', 'assigned'),'&amp;',('approval_status', 'not in', ['approved']),('picking_type_code','=','internal')]}</attribute>
                 </xpath>
                 
-                <xpath expr="//header//button[@name='action_cancel']" position="before">
-                    <button name="send_for_approval" string="Send for Approval" type="object" class="oe_highlight" data-hotkey="a" attrs="{'invisible': ['|',('approval_status', 'not in', ['draft']), ('is_created_by_user', '=', False)]}"/>
+                <xpath expr="//header//button[@name='action_confirm']" position="after">
+                    <button name="send_for_approval" string="Send for Approval" type="object" class="oe_highlight" data-hotkey="a" attrs="{'invisible': ['|','|',('approval_status', 'not in', ['draft']),('picking_type_code','!=','internal'), ('is_created_by_user', '=', False)]}"/>
                     <button name="button_approve" string="Approve" type="object" class="oe_highlight" attrs="{'invisible': ['|', ('approval_status', 'not in', ['pending']), ('is_user_in_approvedby', '=', False)]}"/>
                     <button name="button_reject" string="Reject" type="object" attrs="{'invisible': ['|', ('approval_status', 'not in', ['pending']), ('is_user_in_approvedby', '=', False)]}"/>
                 </xpath>
 
                 <xpath expr="//sheet//field[@name='origin']" position="after">
-                    <field name="approval_status" readonly="1"/>
-                    <field name="approved_by" readonly="1"/>
-                    <field name="approved_time" invisible="1"/>
+                    <field name="approval_status" readonly="1" attrs="{'invisible': [('picking_type_code','!=','internal')]}"/>
+                    <field name="approved_by" readonly="1" attrs="{'invisible': [('picking_type_code','!=','internal')]}"/>
+                    <field name="approved_time" readonly="1" attrs="{'invisible': [('picking_type_code','!=','internal')]}"/>
                     <field name="is_created_by_user" invisible="1"/>
                     <field name="is_user_in_approvedby" invisible="1"/>
                 </xpath>
